Implementado signup con Facebook y Twitter

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
 	head
 		title Login
 		meta(charset="utf-8")
+		link(href="styles/estilos.css" rel="stylesheet")
 	body
-		.contenedor_principal
+		.contenedor_principal.ed-container
 			block cuerpo
