--- a/views/signup.jade
+++ b/views/signup.jade
@@ -1,13 +1,17 @@
 extends layout.jade
 block cuerpo
-	form(action="/auth/local",method="post").signup
-		.signup__imagen
-			img(src="#")
-		.signup__sociales
-			a(href="/auth/facebook") SignUp with Facebook
-			a(href="/auth/twitter") SignUp with FTwitter
-		.signup__datos
-			input(type="email",placeholder="correo",name="email")
-			input(type="password",placeholder="contraseña",name="pass")
-		.signup_accion
-			input(type="submit",value="signup")
+	form(action="/auth/local",method="post").signup.ed-container
+		//- .signup__imagen.ed-item.center.ed-container
+		//- 	img(src="#").signup__imagen__item.abcenter
+		.signup__sociales.ed-item
+			a.signup__sociales__item(href="/auth/facebook") Signup with Facebook
+			a.signup__sociales__item(href="/auth/twitter") Signup with Twitter
+		.signup__datos.ed-item
+			input.signup__input(type="email",placeholder="correo",name="email")
+			input.signup__input(type="password",placeholder="contraseña",name="pass")
+		.signup__accion.ed-item
+			.ed-container
+				.ed-item.base-50.no-padding
+					a.link__accion(href="/login") Login
+				.ed-item.base-50.no-padding
+					input.boton__accion(type="submit",value="signup")
