Login y Signup casi terminado falta comentar

--- a/public/styles/basicos/_variables.scss
+++ b/public/styles/basicos/_variables.scss
@@ -1,1 +1,6 @@
-$color-principal:#19B698;
+// $color-principal:#19B698;
+$color-plomo:#E6E6E6;
+$color-azul:#354B60;
+$color-naranja:#E98B39;
+$color-verde:#5DCBB6;
+$color-rojo:#D14233;
