--- a/public/styles/estilos.scss
+++ b/public/styles/estilos.scss
@@ -48,5 +48,7 @@ $fracciones: (
 //Estilos de la aplicacion(no de ED-GRID)
 @import "basicos/_variables.scss";
 @import "modulos/_botones.scss";
+@import "modulos/_mensajes.scss";
 @import "paginas/_signup.scss";
 @import "paginas/_home.scss";
+@import "paginas/_login.scss";
