--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,8 @@ html
 		title Login
 		meta(charset="utf-8")
 		link(href="styles/estilos.css" rel="stylesheet")
+		script(src="js/jquery.js")
+		script(src="js/user.js")
 	body
 		.contenedor_principal.ed-container
 			block cuerpo
